--- a/index.html
+++ b/index.html
@@ -295,6 +295,20 @@ tr:hover td {
             ramal: "6432"
         },
         {
+            nome: "Operadores",
+            setor: "COA",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "4050"
+        },
+        {
+            nome: "Operadores",
+            setor: "Controle Agrícola",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "4080"
+        },
+        {
             nome: "N/A",
             setor: "Comboio",
             localizacao: "Agrícola",
@@ -631,6 +645,13 @@ tr:hover td {
             ramal: "4194"
         },
         {
+            nome: "Pedro Barbosa",
+            setor: "N/A",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "6468"
+        },
+        {
             nome: "João Carlos Paiva",
             setor: "Diretoria",
             localizacao: "Indústria (Diretoria)",
@@ -873,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
