--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@ tr:hover td {
             ramal: "4062"
         },
         {
-            nome: "Thiago / Raquel",
+            nome: "Thiago / Raquel / Gabriel",
             setor: "RH",
             localizacao: "Indústria",
             radio: "N/A",
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
