--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ tr:hover td {
             nome: "Antônio Carlos",
             setor: "Gerente de Planejamento Agrícola",
             localizacao: "Agrícola",
-            radio: "N/A",
+            radio: "Faixa 2 / 03",
             ramal: "6475"
         },
         {
@@ -634,7 +634,7 @@ tr:hover td {
             nome: "Paulo Barbosa",
             setor: "Diretoria",
             localizacao: "Indústria (Diretoria)",
-            radio: "N/A",
+            radio: "Faixa 6 / 01",
             ramal: "6467"
         },
         {
@@ -646,9 +646,9 @@ tr:hover td {
         },
         {
             nome: "Pedro Barbosa",
-            setor: "N/A",
+            setor: "Gerente de Planejamento Agrícola",
             localizacao: "Agrícola",
-            radio: "N/A",
+            radio: "Faixa 2 / 02",
             ramal: "6468"
         },
         {
@@ -692,13 +692,6 @@ tr:hover td {
             localizacao: "Indústria",
             radio: "Faixa 6 / 066",
             ramal: "N/A"
-        },
-        {
-            nome: "Pedro Barbosa",
-            setor: "N/A",
-            localizacao: "N/A",
-            radio: "N/A",
-            ramal: "6430"
         },
         {
             nome: "Renata",
@@ -894,6 +887,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
