--- a/index.html
+++ b/index.html
@@ -232,6 +232,13 @@ tr:hover td {
             ramal: "4118"
         },
         {
+            nome: "Lucas",
+            setor: "Borracharia",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 038",
+            ramal: "N/A"
+        },
+        {
             nome: "Claudicene / Maria",
             setor: "Recepção Industrial",
             localizacao: "Indústria (Diretoria)",
@@ -533,7 +540,7 @@ tr:hover td {
             ramal: "N/A"
         },
         {
-            nome: "Líder de Produção",
+            nome: "Marquinhos",
             setor: "Oficina Agrícola",
             localizacao: "Agrícola",
             radio: "Faixa 2 / 039",
@@ -887,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
