--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ tr:hover td {
             setor: "Encarregado da Balança",
             localizacao: "Indústria",
             radio: "N/A",
-            ramal: "6441"
+            ramal: "6441 / (64) 98122-4675"
         },
         {
             nome: "Operadores",
@@ -887,6 +887,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
