--- a/index.html
+++ b/index.html
@@ -652,6 +652,13 @@ tr:hover td {
             ramal: "6468"
         },
         {
+            nome: "Pedrinho",
+            setor: "Casa de Força",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "(64) 98133-2908"
+        },
+        {
             nome: "João Carlos Paiva",
             setor: "Diretoria",
             localizacao: "Indústria (Diretoria)",
@@ -887,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
