--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ tr:hover td {
         {
             nome: "Leandro",
             setor: "Laboratório",
-            localizacao: "Indústria (📞Queda de energia)",
+            localizacao: "Indústria / 📞Queda de Energia",
             radio: "Faixa 6 / 04",
             ramal: "4026 / (64) 99334-4624"
         },
@@ -563,7 +563,7 @@ tr:hover td {
         {
             nome: "Mateus",
             setor: "Engenheiro Elétrico",
-            localizacao: "Indústria (📞Queda de energia)",
+            localizacao: "Indústria / 📞Queda de Energia",
             radio: "Faixa 6 / 020",
             ramal: "4055"
         },
@@ -654,7 +654,7 @@ tr:hover td {
         {
             nome: "Pedrinho",
             setor: "Casa de Força",
-            localizacao: "Indústria (📞Queda de energia)",
+            localizacao: "Indústria / 📞Queda de Energia",
             radio: "N/A",
             ramal: "(64) 98133-2908"
         },
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
