--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@ tr:hover td {
 <table>
     <thead>
         <tr>
-            <th>Nome</th>
-            <th>Setor</th>
-            <th>Localização</th>
-            <th>Rádio</th>
-            <th>Ramal</th>
+            <th>👥​Nome</th>
+            <th>🏭​Setor</th>
+            <th>​📍​Localização</th>
+            <th>📻​Rádio</th>
+            <th>​📞​Ramal</th>
         </tr>
     </thead>
     <tbody id="contactTable"></tbody>
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
