--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ tr:hover td {
         },
         {
             nome: "N/A",
-            setor: "Associação",
+            setor: "Portaria",
             localizacao: "Associação",
             radio: "N/A",
             ramal: "4089"
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
