--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ tr:hover td {
             ramal: "4018"
         },
         {
-            nome: "N/A",
+            nome: "Operadores",
             setor: "Portaria",
             localizacao: "Associação",
             radio: "N/A",
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
