--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ tr:hover td {
             setor: "Engenheiro Elétrico",
             localizacao: "Indústria / 📞Queda de Energia",
             radio: "Faixa 6 / 020",
-            ramal: "4055"
+            ramal: "4055 / (64) 98123-2925"
         },
         {
             nome: "Marcelo Barbosa",
@@ -628,7 +628,7 @@ tr:hover td {
             setor: "Diretor Industrial",
             localizacao: "Indústria (Sala dos Supervisores)",
             radio: "Faixa 6 / 02",
-            ramal: "6456 / 6425"
+            ramal: "6456 / 6425 / (64) 98121-5160"
         },
         {
             nome: "Paulo Barbosa",
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
