--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ tr:hover td {
             ramal: "4046"
         },
         {
-            nome: "N/A",
+            nome: "Operadores",
             setor: "Almoxarifado",
             localizacao: "Agrícola",
             radio: "N/A",
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
