--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ tr:hover td {
             <th>👥​ Nome</th>
             <th>🏭​ Setor</th>
             <th>​📍​ Localização</th>
-            <th>📻​ Rádio</th>
+            <th>🔘​ Rádio</th>
             <th>​📞​ Ramal</th>
         </tr>
     </thead>
@@ -894,6 +894,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
