--- a/index.html
+++ b/index.html
@@ -792,6 +792,13 @@ tr:hover td {
             ramal: "6403"
         },
         {
+            nome: "Toni",
+            setor: "Carga e Deascarga de Caminhões(Lavoura)",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 020",
+            ramal: "N/A"
+        },
+        {
             nome: "Eliezer",
             setor: "TI",
             localizacao: "Indústria",
@@ -894,6 +901,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
