--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ tr:hover td {
         },
         {
             nome: "Toni",
-            setor: "Carga e Deascarga de Caminhões(Lavoura)",
+            setor: "Carga e Descarga de Caminhões",
             localizacao: "Agrícola",
             radio: "Faixa 2 / 020",
             ramal: "N/A"
@@ -901,6 +901,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
