--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@ tr:hover td {
             ramal: "6403"
         },
         {
-            nome: "Toni",
+            nome: "Antônio Ioni",
             setor: "Carga e Descarga de Caminhões",
             localizacao: "Agrícola",
             radio: "Faixa 2 / 020",
@@ -901,6 +901,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
