--- a/index.html
+++ b/index.html
@@ -176,6 +176,13 @@ tr:hover td {
             ramal: "6454"
         },
         {
+            nome: "Antoneone",
+            setor: "Carga e Descarga de Caminhões",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 020",
+            ramal: "(64) 99279-8712"
+        },
+        {
             nome: "Antônio Carlos",
             setor: "Gerente de Planejamento Agrícola",
             localizacao: "Agrícola",
@@ -792,13 +799,6 @@ tr:hover td {
             ramal: "6403"
         },
         {
-            nome: "Antônio Ioni",
-            setor: "Carga e Descarga de Caminhões",
-            localizacao: "Agrícola",
-            radio: "Faixa 2 / 020",
-            ramal: "N/A"
-        },
-        {
             nome: "Eliezer",
             setor: "TI",
             localizacao: "Indústria",
@@ -901,6 +901,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
